--- a/templates/uninstalled.html
+++ b/templates/uninstalled.html
@@ -3,11 +3,13 @@
 
 
 {% block title %}
-Your Program Was Succesfully Installed!
+Uninstalled!
 {% endblock title %}
 
 {% block content %}
-<h2 style="text-align: center;">Your Program Was Succesfully Installed!</h2>
+
+<h3 style="text-align: center;">Your App Was Succesfully Uninstalled!</h3>
 <br>
 <a style="text-align: center;" href="{{ url_for('home') }}"><p>Return Back</p></a>
-{% endblock content %}
+
+{% endblock %}
