--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	{% block meta %} {% endblock meta %}
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 
@@ -28,13 +28,16 @@
 	          		<a class="nav-link" href="{{ url_for('home') }}">Download</a>
 	        	</li>
 	        	<li class="nav-item">
-	          		<a class="nav-link" href="#">My App Library</a>
-	       		</li>
+	          		<a class="nav-link" href="{{ url_for('video_download') }}">Download Video</a>
+	        	</li>
+	        	<li class="nav-item">
+	          		<a class="nav-link" href="{{ url_for('image_download') }}">Download Image</a>
+	        	</li>
 	       		<li class="nav-item">
 	          		<a class="nav-link" href="{{ url_for('installed_apps') }}">My Installed Apps</a>
 	        	</li>
 	        	<li class="nav-item">
-	          		<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Uninstall A PC App</a>
+	          		<a class="nav-link" href="{{ url_for('uninstall_app') }}">Uninstall A PC App</a>
 	        	</li>
 	      </ul>
 
